--- a/notebooks/nyc_taxi_model.ipynb
+++ b/notebooks/nyc_taxi_model.ipynb
@@ -416,7 +416,7 @@
     "\n",
     "**Recomendaciones para robustez temporal**  \n",
     "1. **Entrenamiento con ventanas móviles**: incluir datos de otoño-invierno.  \n",
-    "2. **Añadir variables estacionales**: festivos, fin de semana vs. día laborable, condiciones climáticas.  \n"
+    "2. **Añadir variables estacionales**: festivos, fin de semana vs. día laboral, condiciones climáticas.  \n"
    ]
   },
   {
